cli parameter for extra modules